Added base classes for file loading and saving

--- a/window.html
+++ b/window.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <script src="js/mainEventConnections.js"></script>
   <script src="js/settings.js"></script>
+  <script src="js/filesystem/filesystem.js"></script>
+  <script src="js/filesystem/localFilesystem.js"></script>
+  <script src="js/filesystem/remoteFilesystem.js"></script>
   
   </head>
   <body>
