Added bootstrap Added jquery Changed Structure Trying to get a simple setting loading to a working state

--- a/forms/mainForm.html
+++ b/forms/mainForm.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <script src="../js/jquery/jquery.js"></script>
+
+  <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
+  <script src="../js/bootstrap/bootstrap.min.js"></script>
+
+
   <script src="../js/mainEventConnections.js"></script>
-  <script src="../js/settings.js"></script>
-  <script src="../js/filesystem/filesystem.js"></script>
-  <script src="../js/filesystem/localFilesystem.js"></script>
-  <script src="../js/filesystem/remoteFilesystem.js"></script>
+  <script src="../js/classes/datastructure/settingData.js"></script>
+  <script src="../js/classes/settings.js"></script>
+  <script src="../js/classes/filesystem/filesystem.js"></script>
+  <script src="../js/classes/filesystem/localFilesystem.js"></script>
+  <script src="../js/classes/filesystem/remoteFilesystem.js"></script>
 
   </head>
   <body>
