Getting the online offline setting save part to a working state.

--- a/forms/mainForm.html
+++ b/forms/mainForm.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
   <script src="../js/bootstrap/bootstrap.min.js"></script>
 
+  <link rel="stylesheet" href="../css/bootstrap-dialog/bootstrap-dialog.min.css">
+  <script src="../js/bootstrap-dialog/bootstrap-dialog.min.js"></script>
+
 
   <script src="../js/mainEventConnections.js"></script>
   <script src="../js/classes/datastructure/settingData.js"></script>
